--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div id="verticalButtons">
         <button onclick="save()">save</button>
         <button onclick="discard()">discard</button>
-        <button onclick="javascript:location.reload(true)">Redo</button>
+        <button onclick="javascript:savedNew = false;">Manual</button>
+        <button id="restart" onclick="javascript:location.reload(true)">Redo</button>
     </div>
     <!-- <canvas id ="networkCanvas"></canvas> -->
     <script src="visualizer.js"></script>
+    <script src="utils.js"></script>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
-    <script src="utils.js"></script>
     <script src="road.js"></script>
     <script src="controls.js"></script>
     <script src="car.js"></script>
